kubernetes/apps/istio/istio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kfs-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  # - host: "*"
  # - host: kfs-dev.pydemia.org
  - http:
      paths:
      - path: /*
        backend:
          serviceName: istio-ingressgateway
          servicePort: 80
      # - path: /v2/*
      #   backend:
      #     serviceName: another-service
      #     servicePort: 8080
      # - path: /grafana/
      #   backend:
      #     serviceName: grafana
      #     servicePort: 15031
